# Wapix

./: .gitignore  CMakeLists.txt  README.md  Wapiti.md
data/: pattern.txt
scripts/: analyze_model.py  repl.py
src/: CMakeLists.txt  data.cc  data.h  main.cc  misc.cc  misc.h  model.cc  model.h  optimize.cc  optimize.h  option.h  pattern.cc  pattern.h  progress.h  score.cc  score.h  sentence.h  state.cc  state.h  trie.cc  trie.h
